FAC-811: refactor - Update GetAttributeScoreDetail to use PaginatedResponse for attribute score details